fix: 전체조회 빈 리스트 처리